# deploytoagents

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  server.json
.github/workflows/: publish.yml  test.yml
docs/discovery/: deploytoagents-com.md
python/: README.md  pyproject.toml
python/scripts/: smoke.py
python/src/deploytoagents/: __init__.py  client.py
python/tests/: test_client.py
scripts/: smoke.mjs
src/: cli.js  index.d.ts  index.js
test/: client.test.js
