[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "deploytoagents"
version = "0.1.0"
description = "Python client for the Deploy to Agents remote MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "We Are 14 Inc" }]
keywords = ["mcp", "ai-agents", "agent-discovery", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = ["mcp>=1.28,<2"]

[project.urls]
Homepage = "https://deploytoagents.com"
Repository = "https://github.com/saezbaldo/deploytoagents"
Documentation = "https://deploytoagents.com/llms.txt"
Issues = "https://github.com/saezbaldo/deploytoagents/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/deploytoagents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.24"]
